- Fixed several Molten Core raid steps
- Fixed prequest issues with the Tier 0.5 questline
- Fixed warning popups showing for quests that aren't relevant for your selected route.
- Added Egg Freezing steps to UBRS preparation guides
- Added 'The Scarlet Oracle, Demetria' steps to the strat preparation guide
- Several formatting changes to the RXP guides
- Small bugfixes to the RXP guides

3.14 - 2025-01-06
- Added first draft of turnin guide for Strat route
-- We need help on testing this as we cannot copy. Try to grab some items and just run through the guide. It is highly dynamic based on rep/items/quests. We can expect issues here. It is currently missing the item pickup steps. Those and the other routes will be added at a later point.
- A new 'Extras - Mailbox' feature is coming soonTM.

- UI, Max Possible EXP on the experience bar now ignores ignored quests
- UI, Items tab now shouldn't show items from ignored quests if 'Relevant' is checked
- Added in missing items from the quest "Anthion's Strange Request" (8947). This is the last T0.5 Quest which only the STRAT route does. Expensive 9k exp.
- Added step to gather Cenarion Beacon
- Added BWL guide for prep in all routes
- Fixed several waypoints in Prep guide
- Fixed Baron Rivendare step in solo/Main
- Fixed Spectral Essence equip step
- Fixed routing issue with Strat route
- Fixed 'A Bijou for Zansa' items still showing on the 'Items' tab when the quest is completed.
- For STRAT Route, 'Plagued Hatchlings' is now a turnin quest done inside scholo, the QuestLog slot is now used by 'The Scarlet Oracle, Demetria'

3.13 - 2025-12-29
- Fixed "Kitchen Assistance" having prequests when it shouldn't in all routes
- Corrected wrong Noggenfogger quest name under Extras > Items
- Added some text to help with quests

3.12 - 2025-12-22
- Fixed Questlog data for solo route only showing 23 quests
- Added Turnin Guide again (only draft, not finished)
- Removed Glyphed Oaken Branch from solo route prep