@@ -295,7 +295,7 @@ local questsMetadata = {
 	[5282] = { id=5282, name="The Restless Souls", baseexp=14300, exp=0, qlvl=60, type="turnin", routes="Strat", routePickup="EPLEgan", routeSection="EPLEgan2", areaType="Zone", area="Stratholme", comments="Unsure if everyone can complete this in the 2 strat runs - you need to zap 75 ghosts total" },
 	[5262] = { id=5262, name="The Truth Comes Crashing Down", baseexp=14300, exp=0, qlvl=60, type="turnin", routes="Strat", routePickup="EPLTown2", routeSection="EPLTown2", areaType="Dungeon", area="Stratholme", },
 	[5251] = { id=5251, name="The Archivist", baseexp=14300, exp=0, qlvl=60, type="qlog", routes="Strat", routeSection="EPLTown", areaType="Dungeon", area="Stratholme", },
-	[2937] = { id=2937, name="Summoning Shadra", baseexp=12250, exp=0, qlvl=55, type="disabled", reqItems="9324-1", preQuests="2933,2934,2935,2936", routes="Main,Strat,Solo", routeSection="AV", areaType="Zone", area="Tarren Mill", },
+	[2937] = { id=2937, name="Summoning Shadra", baseexp=12250, exp=0, qlvl=55, type="optional", reqItems="9324-1", preQuests="2933,2934,2935,2936", routes="Main,Strat,Solo", routeSection="AV", areaType="Zone", area="Tarren Mill", },
 	[8279] = { id=8279, name="The Twilight Lexicon", baseexp=11900, exp=0, qlvl=60, type="qlog", reqItems="20394-1,20395-1,20396-1", preQuests="8284,8285", routes="Main,Strat,Solo", routePickup="SilithusCave", routeSection="SilithusCave", areaType="Zone", area="Silithus", comments="The books can NOT be looted without the quest after the pre-patch. This quest needs to be in the questlog, or completed beforehand, as we need the followups" },
 	[7441] = { id=7441, name="Pusillin and the Elder Azj'Tordin", baseexp=13500, exp=0, qlvl=58, type="optional", routes="Solo", routeSection="Feralas", areaType="Dungeon", area="Dire Maul", comments="This quest requires too much running for the little ext boost, but if you need it as optional, It's turned in north of Camp Mojache" },
 	[4771] = { id=4771, name="Dawn's Gambit", baseexp=14300, exp=0, qlvl=60, type="turnin", preQuests="4726,4808,4809,4810,4734", routes="Strat", routePickup="EPLTown", routeSection="EPLTown2", areaType="Dungeon", area="Scholomance", },
@@ -320,7 +320,6 @@ local questsMetadata = {
 	[2721] = { id=2721, name="Kirith", baseexp=9000, exp=0, qlvl=58, type="turnin", preQuests="2784,2621,2622,2623,2801,2681", routes="Main,Strat,Solo", routePickup="oldhero", routeSection="oldhero", areaType="Zone", area="Blasted Lands", comments="The mob has a long respawntime (5-9min). Check if the elite or the spirit is up, you can target it from cave entrance. If it's not up, skip it" },
 	[2743] = { id=2743, name="The Cover of Darkness", baseexp=4750, exp=0, qlvl=60, type="turnin", preQuests="2784,2621,2622,2623,2801,2681", routes="Main,Strat,Solo", routePickup="oldhero", routeSection="oldhero", areaType="Zone", area="Blasted Lands", comments="The mob has a long respawntime (5-9min). Check if the elite or the spirit is up, you can target it from cave entrance. If it's not up, skip it" },
 	[3761] = { id=3761, name="Un'Goro Soil", baseexp=6800, exp=0, qlvl=50, type="turnin", reqItems="11018-20", routes="Main,Strat,Solo", routePickup="ThunderBluff", routeSection="ThunderBluff", areaType="Zone", area="Thunder Bluff", comments="This quest gives very little XP. You can skip it, but it's included for completeness" },
-	[4023] = { id=4023, name="A Taste of Flame", baseexp=7900, exp=0, qlvl=54, type="turnin", reqItems="10575-1", routes="Main,Strat", routePickup="BurningSteppes2", routeSection="BurningSteppes2", areaType="Zone", area="Burning Steppes", comments="This quest gives very little XP. You can skip it, but it's included for completeness" },
 	[7142] = { id=7142, name="The Battle for Alterac", baseexp=0, exp=0, qlvl=51, type="qlog", routes="Main,Strat,Solo", routeSection="AV", areaType="Battleground", area="Alterac Valley", isScaling=true, scaleRank=3, comments="bla bla battleground ptr yikes" },
 	[8272] = { id=8272, name="Hero of the Frostwolf", baseexp=0, exp=0, qlvl=51, type="turnin", routes="Main,Strat,Solo", routePickup="AV", routeSection="AV", areaType="Battleground", area="Alterac Valley", isScaling=true, scaleRank=1, comments="bla bla battleground ptr yikes" },
 	[7101] = { id=7101, name="Towers and Bunkers", baseexp=0, exp=0, qlvl=51, type="optional", routes="Main,Strat,Solo", routeSection="AV", areaType="Battleground", area="Alterac Valley", isScaling=true, scaleRank=1, comments="bla bla battleground ptr yikes" },
@@ -673,12 +672,15 @@ end
 tempQuestManagement = nil;
 
 -- Split Quests (Quests that exclude eachother) - Currently Brood of Nozdormu Rings 
-questsMetadata[99001] = { id=99001, name = "Brood Ring - Initial", 	baseexp=9550, exp=9550, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8747,8752,8757}, reqRep=910, reqRepRank=4, routes="Main,Strat,Solo", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
-questsMetadata[99002] = { id=99002, name = "Brood Ring - Friendly",	baseexp=9550, exp=9550, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8748,8753,8758}, reqRep=910, reqRepRank=5, routes="Main,Strat,Solo", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
-questsMetadata[99003] = { id=99003, name = "Brood Ring - Honored", 	baseexp=9550, exp=9550, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8749,8754,8759}, reqRep=910, reqRepRank=6, routes="Main,Strat,Solo", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
-questsMetadata[99004] = { id=99004, name = "Brood Ring - Revered", 	baseexp=9550, exp=9550, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8750,8755,8760}, reqRep=910, reqRepRank=7, routes="Main,Strat,Solo", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
-questsMetadata[99005] = { id=99005, name = "Brood Ring - Exalted", 	baseexp=14300, exp=14300, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8751,8756,8761}, reqRep=910, reqRepRank=8, routes="Main,Strat,Solo", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
+questsMetadata[99001] = { id=99001, name = "Brood Ring - Initial", 	baseexp=9550, exp=9550, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8747,8752,8757}, reqRep=910, reqRepRank=4, routes="Main,Strat,Solo", routePickup="CavernsOfTime", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
+questsMetadata[99002] = { id=99002, name = "Brood Ring - Friendly",	baseexp=9550, exp=9550, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8748,8753,8758}, reqRep=910, reqRepRank=5, routes="Main,Strat,Solo", routePickup="CavernsOfTime", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
+questsMetadata[99003] = { id=99003, name = "Brood Ring - Honored", 	baseexp=9550, exp=9550, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8749,8754,8759}, reqRep=910, reqRepRank=6, routes="Main,Strat,Solo", routePickup="CavernsOfTime", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
+questsMetadata[99004] = { id=99004, name = "Brood Ring - Revered", 	baseexp=9550, exp=9550, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8750,8755,8760}, reqRep=910, reqRepRank=7, routes="Main,Strat,Solo", routePickup="CavernsOfTime", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
+questsMetadata[99005] = { id=99005, name = "Brood Ring - Exalted", 	baseexp=14300, exp=14300, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={8751,8756,8761}, reqRep=910, reqRepRank=8, routes="Main,Strat,Solo", routePickup="CavernsOfTime", routeSection="CavernsOfTime", areaType="Raid", area="Temple of Ahn'Qiraji" }
 
+questsMetadata[99019] = { id=99019, name = "A Taste of Flame", 	baseexp=7900, exp=6300, 	qlvl=60, type="turnin", isSplitQuest=true, splitQuests={4022,4023}, routes="Main,Strat,Solo", routePickup="BurningSteppes2", routeSection="BurningSteppes2", areaType="Zone", area="Burning Steppes" }
+--[4023] = { id=4023, name="A Taste of Flame", baseexp=7900, exp=0, qlvl=54, type="turnin", reqItems="10575-1", routes="Main,Strat", routePickup="BurningSteppes2", routeSection="BurningSteppes2", areaType="Zone", area="Burning Steppes", comments="This quest gives very little XP. You can skip it, but it's included for completeness" },
+	
 --[Lookup Lists]
 local questLogList = {}
 local dicQuestLogList = {}
